tests/fail/transmute_fat1.stderr
error: unsupported operation: unable to turn pointer into raw bytes
  --> $DIR/transmute_fat1.rs:LL:CC
   |
LL |     let _val = bad[0] + bad[bad.len()-1];
   |                ^^^^^^ unable to turn pointer into raw bytes
   |
   = help: this is likely not a bug in the program; it indicates that the program performed an operation that the interpreter does not support
           
   = note: inside `main` at $DIR/transmute_fat1.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

